--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Artificial intelligence Project Intern<br></a> <span>June 2018</span></h2>
+					               	<h2><a href="#">Artificial intelligence Project Intern at Wipro ltd, Gurgaon<br></a> <span>June 2018</span></h2>
 					                  <p>My role in the company helped me gain immense knowledge in the field of machine learning and artificial intelligence. It helped me improve my problem solving ability and how to work together as a team. I worked on an email classifier system to be used by the employees of Wipro and their voice recognition by using the techniques of natural language processing present in Microsoft's Azure machine learning services..</p>
 					               </div>
 					            </div>
