--- a/index.html
+++ b/index.html
@@ -704,6 +704,28 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/pulse.png);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="https://github.com/lang-pulse/Pulse-old">Pulse</a></h3>
+										<span>Pulse is a dynamically typed high-level interpreted language with optimized 
+											implementation of neural networks.</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/numpp.png);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="https://github.com/kunal1197/NumPP">NumPP</a></h3>
+										<span>NumPP is a C++ port of Python's famous numerical and scientific computation 
+											library - NumPy.</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/vastu-kosh.jpg);">
 								<div class="desc">
 									<div class="con">
