--- a/index.html
+++ b/index.html
@@ -844,7 +844,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="mailto:kunal.007ma@gmail.com">kunal.007ma@gmail.com</a></p>
+									<p><li><a href="mailto:kunal.007ma@gmail.com">kunal.007ma@gmail.com</a></li>
+									   <li><a href="mailto:kunal.007ma@gmail.com">mehrotra.k@northeastern.edu</a></li></p>
 								</div>
 							</div>
 
@@ -853,7 +854,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://9952096742">+91 9952096742</a></p>
+									<p><li><a href="tel://8573186045">+1 9952096742</a></li>
+									   <li><a href="tel://9952096742">+91 9952096742</a></li></p>
 								</div>
 							</div>
 
