--- a/index.html
+++ b/index.html
@@ -621,8 +621,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Advanced Ops Engineer at ING Bank, Nederland - Contract, Mumbai, India</a> <span>Dec 2020 - July 2021</span></h2>
-					                  <p><li>• Worked On Financial Services and Banking sector, accustomed to Agile and Scrum rituals. </li>
-							     <li>• Got to work on Linux, Windows admin, Ansible, ION products like ANVIL and ARC and saved over 200 dev-hours.</li>
+					                  <p><li>Worked On Financial Services and Banking sector, accustomed to Agile and Scrum rituals. </li>
+							     <li>Got to work on Linux, Windows admin, Ansible, ION products like ANVIL and ARC and saved over 200 dev-hours.</li>
 					            </div>
 					         </article>
 						 
@@ -636,8 +636,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Systems Engineer at Tata Consultancy Services, Mumbai, India</a> <span>Oct 2020 - July 2021</span></h2>
-							       <p><li>• Used Frameworks like Angular and java Spring boot for web Development and delivered the project 3 weeks earlier.</li>
-								  <li>• Worked on Unix, PL/SQL, and Shell scripting-based problems.</li></div>
+							       <p><li>Used Frameworks like Angular and java Spring boot for web Development and delivered the project 3 weeks earlier.</li>
+								  <li>Worked on Unix, PL/SQL, and Shell scripting-based problems.</li></div>
 					            </div>
 					         </article>
 						 
@@ -650,9 +650,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Full Stack Developer at Acme In Tech, Lucknow</a> <span>Apr - Sep 2020</span></h2>
-							       <p><li>• Created a Marketplace E-commerce platform and increased revenue by 50%.</li>
-								  <li>• Worked on technologies like WordPress, Bootstrap, MySql, PHP, Laravel, jQuery.</li>
-						                  <li>• Worked on Amazon’s EC2 instances, auto-scaling, and Load Balancers and made the site faster by 20%.</li>
+							       <p><li>Created a Marketplace E-commerce platform and increased revenue by 50%.</li>
+								  <li>Worked on technologies like WordPress, Bootstrap, MySql, PHP, Laravel, jQuery.</li>
+						                  <li>Worked on Amazon’s EC2 instances, auto-scaling, and Load Balancers and made the site faster by 20%.</li>
 							</div>
 					            </div>
 					         </article>
@@ -665,8 +665,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					               <div class="timeline-label">
 					               	<h2><a href="#">Research Assistant at BRNS<br></a> <span>Jan 2019 - May 2020</span></h2>
-							       <p><li>• Created X-ray baggage scanning application by using Convolutional Neural Network-based binary classifier for colored baggage x-rays, with an F1 score of 0.97.</li>
-								  <li>• Deployed these models as Flask app in Pynq Z1 and Nvidia Jetson Nano edge boards.</li></p>
+							       <p><li>Created X-ray baggage scanning application by using Convolutional Neural Network-based binary classifier for colored baggage x-rays, with an F1 score of 0.97.</li>
+								  <li>Deployed these models as Flask app in Pynq Z1 and Nvidia Jetson Nano edge boards.</li></p>
 					               </div>
 					            </div>
 					         </article>
@@ -845,7 +845,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 								<div class="colorlib-text">
 									<p><li><a href="mailto:kunal.007ma@gmail.com">kunal.007ma@gmail.com</a></li>
-									   <li><a href="mailto:kunal.007ma@gmail.com">mehrotra.k@northeastern.edu</a></li></p>
+									   <li><a href="mailto:mehrotra.k@northeastern.edu">mehrotra.k@northeastern.edu</a></li></p>
 								</div>
 							</div>
 
@@ -854,7 +854,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><li><a href="tel://8573186045">+1 9952096742</a></li>
+									<p><li><a href="tel://8573186045">+1 8573186045</a></li>
 									   <li><a href="tel://9952096742">+91 9952096742</a></li></p>
 								</div>
 							</div>
