--- a/index.html
+++ b/index.html
@@ -844,8 +844,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><li><a href="mailto:kunal.007ma@gmail.com">kunal.007ma@gmail.com</a></li>
-									   <li><a href="mailto:mehrotra.k@northeastern.edu">mehrotra.k@northeastern.edu</a></li></p>
+									<p><<a href="mailto:kunal.007ma@gmail.com">kunal.007ma@gmail.com</a>
+									   <a href="mailto:mehrotra.k@northeastern.edu">mehrotra.k@northeastern.edu</a></p>
 								</div>
 							</div>
 
@@ -854,8 +854,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><li><a href="tel://8573186045">+1 8573186045</a></li>
-									   <li><a href="tel://9952096742">+91 9952096742</a></li></p>
+									<p><a href="tel://8573186045">+1 8573186045</a>
+									   <a href="tel://9952096742">+91 9952096742</a></p>
 								</div>
 							</div>
 
