--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><<a href="mailto:kunal.007ma@gmail.com">kunal.007ma@gmail.com</a>
+									<p><a href="mailto:kunal.007ma@gmail.com">kunal.007ma@gmail.com</a><br>
 									   <a href="mailto:mehrotra.k@northeastern.edu">mehrotra.k@northeastern.edu</a></p>
 								</div>
 							</div>
@@ -854,7 +854,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://8573186045">+1 8573186045</a>
+									<p><a href="tel://8573186045">+1 8573186045</a><br>
 									   <a href="tel://9952096742">+91 9952096742</a></p>
 								</div>
 							</div>
