--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									            <p>Northeastern Univeristy, Khoury College of Computer Sciences.</p>
 													<ul>
 														<li>Batch 2021-2023</li>
-														<li>CGPA: Na</li>
+														<li>CGPA: 4</li>
 					
 													</ul>
 									        </div>
@@ -555,18 +555,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									
 
 									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingTwo">
+									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree of Computer Science
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
 									            <p>SRM Institute of Science and Technology, Kattankulathur</p>
 													<ul>
 														<li>Batch 2016-2020</li>
-														<li>CGPA: 8.3 CGPA</li>
+														<li>CGPA: 3.5/4</li>
 														<li>Percent: 86.72%</li>
 													</ul>
 									        </div>
