--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/img_bg_1.png);"></div>
+				<div class="author-img" style="background-image: url(images/img_bg_1.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Kunal Mehrotra</a></h1>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -92,7 +92,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/img_bg_2.PNG);">
+				   	<li style="background-image: url(images/img_bg_2.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
